# GameOfLife

./: CMakeLists.txt  README.md  config.cfg  main.cpp
constructs/: copperhead.rle
inc/: Cell.h  Game.h
src/: Game.cpp
